# cervical-lens-submission

./: .gitignore  .vercelignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build-apk.yml
docs/design/: mobile-app.md  web-app.md
models/: README.md  export_genomics_json.py  inference.py  requirements.txt  serve.py
models/genomics/: combined_risk_real.pkl  genomics_metrics.json
models/imaging/: imaging_metrics.json
platform/: build-vercel.js  package.json  patch-gradle-files.js  turbo.json  vercel.json
platform/api/: cervicallens_edge.onnx  index.mjs
platform/apps/api/: .gitignore  package.json  tsconfig.json
platform/apps/api/src/: app.ts  config.ts  index.ts  vercel-entry.ts
platform/apps/api/src/lib/: auth.ts  storage.ts
platform/apps/api/src/middleware/: auth.ts
platform/apps/api/src/ml/: cytology.ts  genomicsRisk.ts  genomics_risk_model.json
platform/apps/api/src/routes/: campaigns.ts  cytology.ts  device-tokens.ts  notifications.ts  patients.ts  reviews.ts  risk.ts  slides.ts
platform/apps/mobile/: App.tsx  DEPLOY.md  app.json  eas.json  package.json  tsconfig.json
platform/apps/mobile/.eas/workflows/: build.yml
platform/apps/mobile/src/api/: client.ts
platform/apps/mobile/src/navigation/: AuthContext.tsx  RootNavigator.tsx
platform/apps/mobile/src/screens/: CaptureScreen.tsx  HomeScreen.tsx  LoginScreen.tsx  PatientDirectoryScreen.tsx  ProfileScreen.tsx  RegisterPatientScreen.tsx  ScreeningResultScreen.tsx  (+1 more)
platform/apps/web/: .gitignore  next.config.ts  package.json  tsconfig.json
platform/public/: index.html
(+18 files in other folders)
